--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "mongoose": "^5.5.2",
     "node-sass-middleware": "^0.11.0"
   }
 }
